fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__trailing-backslash_C011.F90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C011.F90:7:22: C011 Trailing backslash
  |
5 |     real :: A
6 |
7 |     ! Just a comment \
  |                      ^ C011
8 |     A = 2.0
9 |     print *, A
  |
