fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__unchecked-allocate-stat_C181.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C181.f90:14:20: C181 stat argument 'status' is overwritten before being checked in this scope.
   |
12 |   ! Set stat, but don't check it until after another allocate.
13 |   ! Should raise an error.
14 |   allocate (x(10), stat=status)
   |                    ^^^^^^^^^^^ C181
15 |
16 |   ! Set same stat and check it.
   |

./resources/test/fixtures/correctness/C181.f90:29:20: C181 stat argument 'status' is overwritten before being checked in this scope.
   |
28 |   ! Repeat, but the second allocate is not a direct sibling
29 |   allocate (x(10), stat=status)
   |                    ^^^^^^^^^^^ C181
30 |   if (.true.) then
31 |     allocate (y(10), stat=status)
   |

./resources/test/fixtures/correctness/C181.f90:59:20: C181 stat argument 'status_x' is overwritten before being checked in this scope.
   |
58 |   ! Repeat, but using a custom error handler
59 |   allocate (x(10), stat=status_x)
   |                    ^^^^^^^^^^^^^ C181
60 |   if (.true.) then
61 |     allocate (y(10), stat=status_y)
   |

./resources/test/fixtures/correctness/C181.f90:103:22: C181 stat argument 'status_x' is not checked in this scope.
    |
101 |   ! Stat is not checked in any cases. Should raise for all four.
102 |   if(if_option == 1) then
103 |     allocate (x(10), stat=status_x)
    |                      ^^^^^^^^^^^^^ C181
104 |   else
105 |     allocate (x(30), stat=status_x)
    |

./resources/test/fixtures/correctness/C181.f90:105:22: C181 stat argument 'status_x' is not checked in this scope.
    |
103 |     allocate (x(10), stat=status_x)
104 |   else
105 |     allocate (x(30), stat=status_x)
    |                      ^^^^^^^^^^^^^ C181
106 |   end if
107 |   select case (select_option)
    |

./resources/test/fixtures/correctness/C181.f90:109:22: C181 stat argument 'status_y' is not checked in this scope.
    |
107 |   select case (select_option)
108 |   case(1)
109 |     allocate (y(10), stat=status_y)
    |                      ^^^^^^^^^^^^^ C181
110 |   case default
111 |     allocate (y(20), stat=status_y)
    |

./resources/test/fixtures/correctness/C181.f90:111:22: C181 stat argument 'status_y' is not checked in this scope.
    |
109 |     allocate (y(10), stat=status_y)
110 |   case default
111 |     allocate (y(20), stat=status_y)
    |                      ^^^^^^^^^^^^^ C181
112 |   end select
    |

./resources/test/fixtures/correctness/C181.f90:116:20: C181 stat argument 'status_w' is overwritten before being checked in this scope.
    |
114 |   ! Set stat, but overwrite it before checking it.
115 |   ! Should raise an error.
116 |   allocate (w(10), stat=status_w)
    |                    ^^^^^^^^^^^^^ C181
117 |   status_w = 0
118 |   if (status_w /= 0) then
    |

./resources/test/fixtures/correctness/C181.f90:126:20: C181 stat argument 'status_z' is not checked in this scope.
    |
124 |   ! Set stat, but don't check it until the end of the program.
125 |   ! Should raise an error.
126 |   allocate (z(10), stat=status_z)
    |                    ^^^^^^^^^^^^^ C181
127 |
128 |   print *, "Something between allocate and the end of the program"
    |
