fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__use-all_C121.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C121.f90:3:3: C121 'use' statement missing 'only' clause
  |
1 | module my_module
2 |   use, intrinsic :: iso_fortran_env, only: real32
3 |   use, intrinsic :: iso_c_binding
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ C121
4 | end module my_module
  |
